# repo-k-graph

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  release.yml
crates/rkg-cli/: Cargo.toml
crates/rkg-cli/src/: cli_def.rs  completions.rs  lib.rs  main.rs
crates/rkg-cli/tests/: android_linkage.rs  bench_commands.rs  call_commands.rs  cargo_workspace.rs  concurrency_commands.rs  concurrency_topology.rs  context_commands.rs  coverage_commands.rs  db_commands.rs  decorator_commands.rs  distribution_docs.rs  doc_commands.rs  ds_ml_commands.rs  fsharp_relationships.rs  fsharp_routes.rs  fsharp_symbols.rs  fsharp_tests.rs  fsharp_workspace.rs  git_commands.rs  impact_commands.rs  import_commands.rs  ingestion_commands.rs  kotlin_concurrency.rs  kotlin_flow_topology.rs  kotlin_provenance_flow.rs  kotlin_relationships.rs  kotlin_symbols.rs  kotlin_workspace.rs  macro_expansion.rs  mcp_client_config_docs.rs  mcp_stdio_smoke.rs  model_commands.rs  mojo_relationships.rs  mojo_symbols.rs  mojo_tests.rs  notebook_indexing.rs  pipeline_commands.rs  route_commands.rs  rust_relationships.rs  rust_routes.rs  (+10 more)
crates/rkg-cli/tests/fixtures/mcp-transcripts/: antigravity-basic.jsonl  claude-code-basic.jsonl  codex-basic.jsonl  forgecode-error.jsonl
crates/rkg-core/: Cargo.toml
crates/rkg-core/src/: lib.rs
crates/rkg-db/: Cargo.toml
crates/rkg-db/src/: lib.rs
crates/rkg-indexer/: Cargo.toml
crates/rkg-indexer/src/: android_parser.rs  cargo_parser.rs  coverage_parser.rs  fsharp_parser.rs  kotlin_project_parser.rs  lib.rs  swift_project_parser.rs
crates/rkg-indexer/tests/: file_discovery.rs
crates/rkg-lang-fsharp/: Cargo.toml
crates/rkg-lang-fsharp/src/: lib.rs
crates/rkg-lang-kotlin/: Cargo.toml
crates/rkg-lang-kotlin/src/: lib.rs
crates/rkg-lang-mojo/: Cargo.toml  build.rs
crates/rkg-lang-mojo/src/: lib.rs
crates/rkg-lang-python/: Cargo.toml
crates/rkg-lang-python/src/: lib.rs
crates/rkg-lang-rust/: Cargo.toml
crates/rkg-lang-rust/src/: lib.rs
crates/rkg-lang-swift/: Cargo.toml
crates/rkg-lang-swift/src/: lib.rs
crates/rkg-mcp/: Cargo.toml
crates/rkg-mcp/src/: lib.rs  server.rs
crates/rkg-mcp/tests/: mcp_tests.rs
crates/rkg-query/: Cargo.toml
crates/rkg-query/src/: lib.rs
docs/: architecture.md  best-practices.md  dev-roadmap.md  language-adapter-guide.md  project-proposal.md  release-checklist.md  schema-reference.md  user-manual.md
docs/presentations/: rkg-intro.html  rkg-intro.md
fixtures/benchmarks/: tasks.json
fixtures/benchmarks/repos/fsharp/: Library.fs  Library.fsproj  Program.fs
fixtures/benchmarks/repos/kotlin/src/main/kotlin/: App.kt  Service.kt
fixtures/benchmarks/repos/kotlin/src/test/kotlin/: AppTest.kt
fixtures/benchmarks/repos/mojo/: helper.mojo  main.mojo  test_helper.mojo
fixtures/benchmarks/repos/python/src/: main.py  utils.py
fixtures/benchmarks/repos/python/tests/: test_main.py
fixtures/benchmarks/repos/rust/: Cargo.toml
fixtures/benchmarks/repos/rust/src/: lib.rs
fixtures/benchmarks/repos/rust/tests/: integration.rs
fixtures/benchmarks/repos/swift/Sources/: App.swift  Helper.swift
fixtures/benchmarks/repos/swift/Tests/: AppTests.swift
fixtures/sample-repos/fsharp-basic/: basic.fsproj  script.fsx
fixtures/sample-repos/fsharp-basic/src/: patient.fs
fixtures/sample-repos/kotlin-android-basic/: README.md  settings.gradle.kts
fixtures/sample-repos/kotlin-android-basic/app/: build.gradle.kts
fixtures/sample-repos/kotlin-android-basic/app/src/main/: AndroidManifest.xml
fixtures/sample-repos/kotlin-android-basic/app/src/main/java/com/example/app/: MainActivity.kt
fixtures/sample-repos/kotlin-android-basic/app/src/main/res/drawable/: ic_launcher.xml
fixtures/sample-repos/kotlin-android-basic/app/src/main/res/layout/: activity_main.xml
fixtures/sample-repos/kotlin-android-basic/app/src/main/res/layout-land/: activity_main.xml
fixtures/sample-repos/kotlin-android-basic/app/src/main/res/navigation/: nav_graph.xml
fixtures/sample-repos/kotlin-android-basic/app/src/main/res/values/: strings.xml
fixtures/sample-repos/python-basic/: README.md
fixtures/sample-repos/python-basic/src/: example.py  notebook.ipynb
fixtures/sample-repos/python-basic/tests/: test_example.py
scripts/: gen_command_ref.sh  run_benchmarks.sh
