[package]
name = "rkg-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
name = "rkg_cli"
path = "src/lib.rs"

[[bin]]
name = "rkg"
path = "src/main.rs"

[[bin]]
name = "rkg-completions"
path = "src/completions.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
rkg-core.workspace = true
rkg-db.workspace = true
rkg-indexer.workspace = true
rkg-lang-python.workspace = true
rkg-lang-rust.workspace = true
rkg-lang-fsharp.workspace = true
rkg-lang-mojo.workspace = true
rkg-lang-kotlin.workspace = true
rkg-lang-swift.workspace = true
rkg-mcp.workspace = true
rkg-query.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"

[dev-dependencies]
assert_cmd = "2.0"
