[package]
name = "rkg-indexer"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rkg-core.workspace = true
rkg-lang-python = { path = "../rkg-lang-python" }
ignore = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.13"
