[package]
name = "rkg-query"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
rkg-core.workspace = true
rkg-db = { path = "../rkg-db" }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.13"
